# hp-docs-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  commitlint.config.mjs  docker-compose.yml  mise.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py
backend/src/app/: config.py  db.py  logging.py  main.py
backend/src/app/api/: conversations.py  deps.py  errors.py  health.py  middleware.py  schemas.py  sse.py
backend/src/app/ingest/: __main__.py  captioning.py  checksums.py  chunking.py  embedding.py  figures.py  indexing.py  job.py  parsing.py
backend/src/app/providers/: anthropic.py  base.py  factory.py  ollama.py  scripted.py
backend/src/app/rag/: chat_service.py  fusion.py  (+4 more)
backend/tests/: conftest.py  test_app_lifecycle.py  test_captioning.py  test_captioning_slow.py  test_chat_service.py  test_checksums.py  test_chunking.py  test_config.py  test_conversations_api.py  test_conversations_slow.py  test_cors.py  test_db.py  test_derive_title.py  test_embedding.py  test_embedding_slow.py  test_error_envelope.py  test_eval_golden.py  test_eval_judge.py  test_eval_metrics.py  test_eval_refusal.py  test_eval_report.py  test_eval_rerank.py  test_figures.py  test_fusion.py  test_health.py  test_health_slow.py  test_history.py  test_indexing.py  test_indexing_slow.py  test_ingest_job.py  test_parsing.py  test_prompting.py  test_providers.py  test_repositories_slow.py  test_request_id_middleware.py  test_retrieval.py  test_rewrite.py  test_sparse_query.py  test_sse.py
(+58 files in other folders)
