[project]
name = "app"
version = "0.1.0"
description = "HP Docs RAG ChatBot backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "pgvector>=0.5.0",
    "pymupdf4llm>=1.28.0",
    "sentence-transformers>=5.6.0",
    "anthropic>=0.117.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "black>=24.10",
    "ruff>=0.8",
    "pyrefly>=1.1",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.black]
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: integration tests requiring external resources"]
addopts = "-m 'not slow'"

[tool.coverage.run]
source = ["app"]
omit = ["*/__main__.py"]  # thin entrypoint; logic lives in job.py

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

